--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,16 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
     id 'com.android.application' version '7.2.1' apply false
     id 'com.android.library' version '7.2.1' apply false
-    id 'org.jetbrains.kotlin.android' version '1.7.10' apply false
+    id 'org.jetbrains.kotlin.android' version '1.6.10' apply false
 }
 
 task clean(type: Delete) {
     delete rootProject.buildDir
+}
+
+ext {
+    kotlin_version = '1.6.10'
+    arch_lifecycle_version = '2.5.0-rc01'
+    activity_compose_version = '1.5.0'
+    compose_version = '1.1.1'
 }
