--- a/build.gradle
+++ b/build.gradle
@@ -13,4 +13,5 @@ ext {
     arch_lifecycle_version = '2.5.0-rc01'
     activity_compose_version = '1.5.0'
     compose_version = '1.1.1'
+    nav_version = '2.5.0'
 }
