--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,8 +47,7 @@ android {
 }
 
 dependencies {
-    // project
-    project (':ui')
+    implementation project(':ui')
     // kotlin
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.8.0'
