fix build error

--- a/ui-sample/build.gradle
+++ b/ui-sample/build.gradle
@@ -33,6 +33,13 @@ android {
     buildFeatures {
         viewBinding true
     }
+
+    buildFeatures {
+        compose true
+    }
+    composeOptions {
+        kotlinCompilerExtensionVersion compose_version
+    }
 }
 
 dependencies {
