--- a/ui-sample/src/main/AndroidManifest.xml
+++ b/ui-sample/src/main/AndroidManifest.xml
@@ -10,8 +10,7 @@
         android:theme="@style/Theme.AndroidARK">
         <activity
             android:name=".SampleUIActivity"
-            android:exported="true"
-            android:label="@string/app_name">
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -20,7 +19,7 @@
         </activity>
 
         <activity
-            android:name="com.thoughtworks.android.ark.ui.sample.colorsystem.ColorSystemActivity"
+            android:name=".colorsystem.ColorSystemActivity"
             android:exported="true" />
     </application>
 
