--- a/core/build.gradle
+++ b/core/build.gradle
@@ -4,14 +4,11 @@ plugins {
 }
 
 android {
-    namespace 'com.thoughtworks.android.ark.ui'
     compileSdk rootProject.sdk_compile_version
 
     defaultConfig {
         minSdk rootProject.sdk_min_version
         targetSdk rootProject.sdk_target_version
-
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
     }
 
@@ -28,21 +25,12 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
-    buildFeatures {
-        compose true
-    }
-    composeOptions {
-        kotlinCompilerExtensionVersion compose_version
-    }
 }
 
 dependencies {
 
     implementation 'androidx.core:core-ktx:1.8.0'
+    implementation 'androidx.appcompat:appcompat:1.4.2'
     implementation 'com.google.android.material:material:1.6.1'
-    implementation "androidx.compose.ui:ui:$compose_version"
-    implementation "androidx.compose.material:material:$compose_version"
     testImplementation "junit:junit:$junit_version"
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 }
