--- a/settings.gradle
+++ b/settings.gradle
@@ -13,6 +13,11 @@ dependencyResolutionManagement {
     }
 }
 rootProject.name = "Android-ARK"
+// Main App Module
 include ':app'
-include ':ui-sample'
+// UI Module for cross feature UI components
 include ':ui'
+// Common Module/Utils/Extensions for cross feature
+include ':core'
+
+include ':ui-sample'
