--- a/ui-sample/src/main/AndroidManifest.xml
+++ b/ui-sample/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+        android:label="@string/ui_sample"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AndroidARK">
@@ -20,7 +20,10 @@
         </activity>
 
         <activity
-            android:name=".colorsystem.ColorSystemActivity"
+            android:name=".colorsystem.ComposeColorSystemActivity"
+            android:exported="true" />
+        <activity
+            android:name=".colorsystem.XmlColorSystemActivity"
             android:exported="true" />
     </application>
 
