[network]add core/network module

--- a/settings.gradle
+++ b/settings.gradle
@@ -19,5 +19,7 @@ include ':app'
 include ':ui'
 // Common Module/Utils/Extensions for cross feature
 include ':core'
+include ':core:network'
+include ':core:nework'
 
 include ':ui-sample'
