--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id 'com.android.application' version '7.2.1' apply false
     id 'com.android.library' version '7.2.1' apply false
-    id 'org.jetbrains.kotlin.android' version '1.6.10' apply false
+    id 'org.jetbrains.kotlin.android' version '1.7.0' apply false
     id 'com.google.dagger.hilt.android' version '2.43.1' apply false
 }
 
@@ -16,13 +16,19 @@ ext {
     sdk_compile_version = 32
 
     // Build dependency
-    kotlin_version = '1.6.10'
+    kotlin_version = '1.7.0'
+    coroutine_version = '1.6.1'
     arch_lifecycle_version = '2.5.1'
-    activity_compose_version = '1.5.0'
-    compose_version = '1.1.1'
+    activity_compose_version = '1.5.1'
+    compose_version = '1.2.0'
     nav_version = '2.5.1'
     hilt_version = '2.42'
 
     // Test dependency
     junit_version = '4.13.2'
+    truth_version = '1.1.2'
+    arch_test_version = '2.1.0'
+    mockk_version = '1.12.5'
+    espresso_version = '3.4.0'
+    robolectric_version = '4.8.1'
 }
