--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,7 @@ android {
 
 dependencies {
     implementation project(':ui')
+    implementation project(':core')
     // kotlin
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.8.0'
