--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'com.android.library' version '7.2.1' apply false
     id 'org.jetbrains.kotlin.android' version '1.7.0' apply false
     id 'com.google.dagger.hilt.android' version '2.43.1' apply false
+    id 'io.gitlab.arturbosch.detekt' version '1.21.0' apply false
 }
 
 task clean(type: Delete) {
