--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,8 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".ui.assistdemo.AssistDemoActivity" />
+        <activity android:name=".developtools.assistdemo.AssistDemoActivity" />
+        <activity android:name=".developtools.DevelopToolsActivity" />
     </application>
 
 </manifest>
