--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,9 @@ ext {
     hilt_version = '2.42'
     detekt_version = '1.21.0'
 
+    retrofit_version = '2.6.0'
+    okhttp_logging_version = '3.11.0'
+    arch_lifecycle_extension = '2.2.0'
     // Test dependency
     junit_version = '4.13.2'
     truth_version = '1.1.2'
