--- a/config/detekt/detekt.yml
+++ b/config/detekt/detekt.yml
@@ -326,6 +326,7 @@ naming:
     excludeClassPattern: '$^'
     ignoreAnnotated: ['Composable']
     ignoreOverridden: true
+    ignoreAnnotated: ['Composable']
   FunctionParameterNaming:
     active: true
     parameterPattern: '[a-z][A-Za-z0-9]*'
