--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,7 @@ ext {
     compose_version = '1.2.0'
     nav_version = '2.5.1'
     hilt_version = '2.42'
+    detekt_version = '1.21.0'
 
     // Test dependency
     junit_version = '4.13.2'
