--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -30,7 +30,9 @@ junit = "4.13.2"
 mockk = '1.12.5'
 truth = '1.1.2'
 
-
+# android test
+androidx-junit = "1.1.3"
+espresso-core = "3.4.0"
 
 [libraries]
 # plugin
@@ -78,9 +80,12 @@ mockk = { module = "io.mockk:mockk", version.ref = "mockk" }
 mockk-agent = { module = "io.mockk:mockk-agent-jvm", version.ref = "mockk" }
 truth = { module = "com.google.truth:truth", version.ref = "truth" }
 
+# android test
 coreTesting = { module = "androidx.arch.core:core-testing", version.ref = "arch_test" }
 composeUiTest = { module = "androidx.compose.ui:ui-test-junit4", version.ref = "compose" }
 hiltTesting = { module = "com.google.dagger:hilt-android-testing", version.ref = "hilt" }
+androidx-junit = { module = "androidx.test.ext:junit", version.ref = "androidx-junit" }
+espresso-core = { module = "androidx.test.espresso:espresso-core", version.ref = "espresso-core" }
 
 [bundles]
 compose = [
