1 add jacoco test coverage script 2 add jacoco config 3 add jacoco module filter in jacoco config

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,7 @@ plugins {
     id 'kotlin-kapt'
     id 'io.gitlab.arturbosch.detekt'
 }
+apply from: '../config/jacoco/modules.gradle'
 
 android {
     compileSdk rootProject.sdk_compile_version
