--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ plugins {
     id 'kotlin-kapt'
     id 'io.gitlab.arturbosch.detekt'
 }
-apply from: '../config/jacoco/modules.gradle'
+apply from: '../config/jacoco/modules.kts'
 
 android {
     compileSdk rootProject.sdk_compile_version
