--- a/ui/build.gradle
+++ b/ui/build.gradle
@@ -2,7 +2,7 @@ plugins {
     id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
 }
-apply from: '../config/jacoco/modules.gradle'
+apply from: '../config/jacoco/modules.kts'
 android {
     namespace 'com.thoughtworks.android.ark.ui'
     compileSdk rootProject.sdk_compile_version
