fix merge conflict

--- a/app/src/dev/AndroidManifest.xml
+++ b/app/src/dev/AndroidManifest.xml
@@ -16,5 +16,6 @@
                 android:resource="@xml/shortcuts" />
         </activity>
 
+        <activity android:name=".developtools.DevelopToolsActivity" />
     </application>
 </manifest>
