--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,37 +1,32 @@
 [versions]
 # android
-minSdkVersion = "26"
-targetSdkVersion = "32"
-compileSdkVersion = "32"
-composeVersion = "1.2.0"
-jvmTargetVersion = "1.8"
-
-# plugin
-gradle = "7.2.2"
-kotlin = "1.7.0"
-hilt_plugin = "2.43.1"
-detekt = "1.21.0"
+sdk_min_version = "26"
+sdk_target_version = "32"
+sdk_compile_version = "32"
 
 # library
+gradle = "7.2.2"
+kotlin = "1.7.0"
+detekt = "1.21.0"
 activity_compose = "1.5.1"
 appcompat = "1.4.2"
 arch_lifecycle = "2.5.1"
-arch_lifecycle_extension = '2.2.0'
-compose = '1.2.0'
+arch_lifecycle_extension = "2.2.0"
+compose = "1.2.0"
 constraint_layout = "2.1.4"
 core_ktx = "1.8.0"
 navigation = "2.5.1"
-hilt = "2.42"
+hilt = "2.43.1"
 kotlinx_coroutines = "1.6.3"
 material = "1.6.1"
 retrofit = "2.6.0"
-okhttp_logging = '3.11.0'
+okhttp_logging = "3.11.0"
 
 # test
-arch_test = '2.1.0'
+arch_test = "2.1.0"
 junit = "4.13.2"
-mockk = '1.12.5'
-truth = '1.1.2'
+mockk = "1.12.5"
+truth = "1.1.2"
 
 # android test
 androidx-junit = "1.1.3"
@@ -77,9 +72,13 @@ navigation-uiKtx = { module = "androidx.navigation:navigation-ui-ktx", version.r
 hilt-android = { module = "com.google.dagger:hilt-android", version.ref = "hilt" }
 hilt-compiler = { module = "com.google.dagger:hilt-android-compiler", version.ref = "hilt" }
 
+# retrofit
 retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
 retrofit-converter = { module = "com.squareup.retrofit2:converter-gson", version.ref = "retrofit" }
 okhttp-logging = { module = "com.squareup.okhttp3:logging-interceptor", version.ref = "okhttp_logging" }
+
+# detekt
+detekt-formatting = { module = "io.gitlab.arturbosch.detekt:detekt-formatting", version.ref = "detekt" }
 
 # test
 junit4 = { module = "junit:junit", version.ref = "junit" }
@@ -119,5 +118,5 @@ application = { id = "com.android.application", version.ref = "gradle" }
 library = { id = "com.android.library", version.ref = "gradle" }
 kotlin = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kapt = { id = "org.jetbrains.kotlin.kapt", version.ref = "kotlin" }
-hilt = { id = "com.google.dagger.hilt.android", version.ref = "hilt_plugin" }
+hilt = { id = "com.google.dagger.hilt.android", version.ref = "hilt" }
 detekt = { id = "io.gitlab.arturbosch.detekt", version.ref = "detekt" }
