rename develop tools to develop menu

--- a/app/src/dev/AndroidManifest.xml
+++ b/app/src/dev/AndroidManifest.xml
@@ -16,6 +16,6 @@
                 android:resource="@xml/shortcuts" />
         </activity>
 
-        <activity android:name=".developtools.DevelopToolsActivity" />
+        <activity android:name=".developmenu.DevelopMenuActivity" />
     </application>
 </manifest>
