--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -19,8 +19,8 @@ navigation = "2.5.1"
 hilt = "2.43.1"
 kotlinx_coroutines = "1.6.3"
 material = "1.6.1"
-retrofit = "2.6.0"
-okhttp_logging = "3.11.0"
+retrofit = "2.9.0"
+okhttp_logging = "4.10.0"
 systemuicontroller = "0.17.0"
 
 # test
@@ -75,7 +75,7 @@ hilt-android = { module = "com.google.dagger:hilt-android", version.ref = "hilt"
 hilt-compiler = { module = "com.google.dagger:hilt-android-compiler", version.ref = "hilt" }
 
 # retrofit
-retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
+retrofit-core = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
 retrofit-converter = { module = "com.squareup.retrofit2:converter-gson", version.ref = "retrofit" }
 okhttp-logging = { module = "com.squareup.okhttp3:logging-interceptor", version.ref = "okhttp_logging" }
 
@@ -113,6 +113,7 @@ android = [
     "lifecycle-liveDataKtx", "lifecycle-runtimeKtx", "lifecycle-viewModelKtx", "systemuicontroller"
 ]
 navigation = ["navigation-compose", "navigation-fragmentKtx", "navigation-uiKtx"]
+retrofit = ["retrofit-core", "retrofit-converter", "okhttp-logging"]
 unitTest = ["junit4", "kotlin-coroutinesTest", "mockk", "mockk-agent", "truth"]
 
 [plugins]
