--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -18,8 +18,10 @@ core_ktx = "1.8.0"
 navigation = "2.5.1"
 hilt = "2.43.1"
 kotlinx_coroutines = "1.6.3"
+kotlinx_serialization_json = "1.3.3"
 material = "1.6.1"
 retrofit = "2.9.0"
+retrofit_kotlinx_serialization_json = "0.8.0"
 okhttp_logging = "4.10.0"
 systemuicontroller = "0.17.0"
 
@@ -40,14 +42,16 @@ kotlinGradlePlugin = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin", ver
 
 # kotlin
 kotlin-stdlib = { module = "org.jetbrains.kotlin:kotlin-stdlib-jdk8", version.ref = "kotlin" }
+kotlin-serializationPlugin = { module = "org.jetbrains.kotlin:kotlin-serialization", version.ref = "kotlin" }
 kotlin-coroutines = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-android", version.ref = "kotlinx_coroutines" }
+kotlin-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlinx_serialization_json" }
 
 # android
 appcompat = { module = "androidx.appcompat:appcompat", version.ref = "appcompat" }
 constraintLayout = { module = "androidx.constraintlayout:constraintlayout", version.ref = "constraint_layout" }
 coreKtx = { module = "androidx.core:core-ktx", version.ref = "core_ktx" }
 material = { module = "com.google.android.material:material", version.ref = "material" }
-systemuicontroller = { module = "com.google.accompanist:accompanist-systemuicontroller", version.ref = "systemuicontroller"}
+systemuicontroller = { module = "com.google.accompanist:accompanist-systemuicontroller", version.ref = "systemuicontroller" }
 
 # lifecycle
 lifecycle-liveDataKtx = { module = "androidx.lifecycle:lifecycle-livedata-ktx", version.ref = "arch_lifecycle" }
@@ -76,7 +80,7 @@ hilt-compiler = { module = "com.google.dagger:hilt-android-compiler", version.re
 
 # retrofit
 retrofit-core = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
-retrofit-converter = { module = "com.squareup.retrofit2:converter-gson", version.ref = "retrofit" }
+retrofit-kotlin-serialization = { module = "com.jakewharton.retrofit:retrofit2-kotlinx-serialization-converter", version.ref = "retrofit_kotlinx_serialization_json" }
 okhttp-logging = { module = "com.squareup.okhttp3:logging-interceptor", version.ref = "okhttp_logging" }
 
 # detekt
@@ -107,19 +111,20 @@ compose = [
     "compose-uiTooling",
     "compose-uiToolingPreview"
 ]
-kotlin = ["kotlin-stdlib", "kotlin-coroutines"]
+kotlin = ["kotlin-stdlib", "kotlin-coroutines", "kotlin-serialization-json"]
 android = [
     "appcompat", "constraintLayout", "coreKtx", "material",
     "lifecycle-liveDataKtx", "lifecycle-runtimeKtx", "lifecycle-viewModelKtx", "systemuicontroller"
 ]
 navigation = ["navigation-compose", "navigation-fragmentKtx", "navigation-uiKtx"]
-retrofit = ["retrofit-core", "retrofit-converter", "okhttp-logging"]
+retrofit = ["retrofit-core", "retrofit-kotlin-serialization", "okhttp-logging"]
 unitTest = ["junit4", "kotlin-coroutinesTest", "mockk", "mockk-agent", "truth"]
 
 [plugins]
 application = { id = "com.android.application", version.ref = "gradle" }
 library = { id = "com.android.library", version.ref = "gradle" }
 kotlin = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
+kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
 kapt = { id = "org.jetbrains.kotlin.kapt", version.ref = "kotlin" }
 hilt = { id = "com.google.dagger.hilt.android", version.ref = "hilt" }
 detekt = { id = "io.gitlab.arturbosch.detekt", version.ref = "detekt" }
