--- a/ui-sample/src/main/AndroidManifest.xml
+++ b/ui-sample/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:label="@string/ui_sample"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.APP">
+        android:theme="@style/Theme.App">
         <activity
             android:name=".SampleUIActivity"
             android:exported="true">
