fix detekt on hilt abstract class issue

--- a/config/detekt/detekt.yml
+++ b/config/detekt/detekt.yml
@@ -648,6 +648,7 @@ style:
     acceptableLength: 4
     allowNonStandardGrouping: false
   UnnecessaryAbstractClass:
+    ignoreAnnotated: ['dagger.Module']
     active: true
   UnnecessaryAnnotationUseSiteTarget:
     active: false
