--- a/sample/src/main/AndroidManifest.xml
+++ b/sample/src/main/AndroidManifest.xml
@@ -39,5 +39,6 @@
 
         <activity android:name=".feeds.ui.FeedActivity" />
         <activity android:name=".permission.ui.PermissionActivity" />
+        <activity android:name=".sound.SoundActivity" />
     </application>
 </manifest>
