--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -6,13 +6,14 @@ sdk-compile-version = "33"
 
 # library
 gradle = "7.3.1"
-kotlin = "1.7.10"
+kotlin = "1.7.20"
 detekt = "1.22.0"
 activity-compose = "1.6.1"
 appcompat = "1.5.1"
 arch-lifecycle = "2.5.1"
 arch-lifecycle-extension = "2.2.0"
 compose = "1.3.2"
+compose-material = "1.3.1"
 constraint-layout = "2.1.4"
 core-ktx = "1.9.0"
 navigation = "2.5.3"
@@ -63,7 +64,7 @@ lifecycle-extensions = { module = "androidx.lifecycle:lifecycle-extensions", ver
 
 # compose
 compose-activity = { module = "androidx.activity:activity-compose", version.ref = "activity-compose" }
-compose-material = { module = "androidx.compose.material:material", version.ref = "compose" }
+compose-material = { module = "androidx.compose.material:material", version.ref = "compose-material" }
 compose-runtime = { module = "androidx.compose.runtime:runtime", version.ref = "compose" }
 compose-viewmodel = { module = "androidx.lifecycle:lifecycle-viewmodel-compose", version.ref = "arch-lifecycle" }
 compose-ui = { module = "androidx.compose.ui:ui", version.ref = "compose" }
