--- a/webview/src/main/AndroidManifest.xml
+++ b/webview/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.thoughtworks.ark.webview">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application>
         <activity
             android:name=".WebViewActivity"
